# Annli-IPD

./: .gitignore  README.md  specifications.md  todo.md
ipd_local/: .gitignore  blacklist.txt  data_analysis.py  default_functions.py  game_specs.py  get_inputs.py  latest_specs.json  main.py  output_locations.py  problematic_functions.txt  problems.txt  pyproject.toml  run_game.py  service_account.json  simulation.py
ipd_local/ipd_local/: __init__.py  data_analysis.py  default_functions.py  game_specs.py  get_inputs.py  main.py  output_locations.py  safeeval.py  simulation.py
ipd_local/tests/: __init__.py  integration_test.py  integration_tests.py  latest_raw_out.json  latest_specs.json  test_data_analysis.py  test_default_functions.py  test_get_inputs.py  test_simulation.py
ipd_online/: package-lock.json  package.json
ipd_online/src/: App.js  Header.jsx  firebase-config.js
ipd_website/: package-lock.json  package.json
